--- a/composer.json
+++ b/composer.json
@@ -13,38 +13,38 @@
         "doctrine/orm": "^2.13",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.7",
-        "sensio/framework-extra-bundle": "^6.1",
-        "survos/grid-bundle": "*@dev",
-        "symfony/asset": "6.1.*",
-        "symfony/console": "6.1.*",
-        "symfony/doctrine-messenger": "6.1.*",
-        "symfony/dotenv": "6.1.*",
-        "symfony/expression-language": "6.1.*",
+        "survos/simple-datatables-bundle": "^1.5",
+        "symfony/asset": "^7.2",
+        "symfony/console": "^7.2",
+        "symfony/doctrine-messenger": "^7.2",
+        "symfony/dotenv": "^7.2",
+        "symfony/expression-language": "^7.2",
         "symfony/flex": "^2",
-        "symfony/form": "6.1.*",
-        "symfony/framework-bundle": "6.1.*",
-        "symfony/http-client": "6.1.*",
-        "symfony/intl": "6.1.*",
-        "symfony/mailer": "6.1.*",
-        "symfony/mime": "6.1.*",
+        "symfony/form": "^7.2",
+        "symfony/framework-bundle": "^7.2",
+        "symfony/http-client": "^7.2",
+        "symfony/intl": "^7.2",
+        "symfony/mailer": "^7.2",
+        "symfony/mime": "^7.2",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/notifier": "6.1.*",
-        "symfony/process": "6.1.*",
-        "symfony/property-access": "6.1.*",
-        "symfony/property-info": "6.1.*",
-        "symfony/proxy-manager-bridge": "6.1.*",
-        "symfony/runtime": "6.1.*",
-        "symfony/security-bundle": "6.1.*",
-        "symfony/serializer": "6.1.*",
-        "symfony/string": "6.1.*",
-        "symfony/translation": "6.1.*",
-        "symfony/twig-bundle": "6.1.*",
-        "symfony/validator": "6.1.*",
-        "symfony/web-link": "6.1.*",
-        "symfony/yaml": "6.1.*",
+        "symfony/notifier": "^7.2",
+        "symfony/process": "^7.2",
+        "symfony/property-access": "^7.2",
+        "symfony/property-info": "^7.2",
+        "symfony/runtime": "^7.2",
+        "symfony/security-bundle": "^7.2",
+        "symfony/serializer": "^7.2",
+        "symfony/string": "^7.2",
+        "symfony/translation": "^7.2",
+        "symfony/twig-bundle": "^7.2",
+        "symfony/ux-twig-component": "^2.22",
+        "symfony/validator": "^7.2",
+        "symfony/web-link": "^7.2",
+        "symfony/yaml": "^7.2",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
-        "tzunghaor/settings-bundle": "*@dev"
+        "twig/twig": "^3.0",
+        "tzunghaor/settings-bundle": "*@dev",
+        "zenstruck/twig-service-bundle": "^1.5"
     },
     "config": {
         "allow-plugins": {
@@ -95,28 +95,18 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.1.*"
+            "require": "^7.2"
         }
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "6.1.*",
-        "symfony/css-selector": "6.1.*",
-        "symfony/debug-bundle": "6.1.*",
+        "symfony/browser-kit": "^7.2",
+        "symfony/css-selector": "^7.2",
+        "symfony/debug-bundle": "^7.2",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^6.1",
-        "symfony/stopwatch": "6.1.*",
-        "symfony/web-profiler-bundle": "6.1.*"
-    },
-    "repositories": {
-        "bootstrap": {
-            "type": "path",
-            "url": "//home/tac/survos/bundles/bootstrap-bundle"
-        },
-        "settings": {
-            "type": "path",
-            "url": "//home/tac/survos/bundles/settings-bundle"
-        }
+        "symfony/stopwatch": "^7.2",
+        "symfony/web-profiler-bundle": "^7.2"
     }
 }
