--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,20 @@
 {
+    "name": "survos-sites/settings-bundle-demo",
+    "description": "A demo of tzunghaor/settings-bundle",
     "type": "project",
-    "license": "proprietary",
+    "license": "MIT",
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
-        "doctrine/orm": "^2.13",
+        "doctrine/orm": "^3.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.7",
+        "survos/deployment-bundle": "^1.5",
         "survos/simple-datatables-bundle": "^1.5",
         "symfony/asset": "^7.2",
         "symfony/console": "^7.2",
@@ -33,6 +35,7 @@
         "symfony/property-info": "^7.2",
         "symfony/runtime": "^7.2",
         "symfony/security-bundle": "^7.2",
+        "symfony/security-core": "^7.2",
         "symfony/serializer": "^7.2",
         "symfony/string": "^7.2",
         "symfony/translation": "^7.2",
@@ -108,5 +111,11 @@
         "symfony/phpunit-bridge": "^6.1",
         "symfony/stopwatch": "^7.2",
         "symfony/web-profiler-bundle": "^7.2"
+    },
+    "repositories": {
+        "tacman_tzunghaor": {
+            "type": "path",
+            "url": "../settings-bundle"
+        }
     }
 }
