use tacman repo for bundle

--- a/composer.json
+++ b/composer.json
@@ -114,8 +114,8 @@
     },
     "repositories": {
         "tacman_tzunghaor": {
-            "type": "path",
-            "url": "../settings-bundle"
+            "type": "vcs",
+            "url": "git@github.com:tacman/settings-bundle.git"
         }
     }
 }
